[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logmind"
version = "1.0.0"
description = "🧠 Lightweight Intelligent Log Analysis Engine | 轻量级智能日志分析引擎"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq", email = "gitstq@example.com"}
]
keywords = [
    "log", "analysis", "parser", "tui", "cli", 
    "developer-tools", "logging", "monitoring", "devops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
all = [
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
logmind = "logmind.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/LogMind"
Documentation = "https://github.com/gitstq/LogMind#readme"
Repository = "https://github.com/gitstq/LogMind"
Issues = "https://github.com/gitstq/LogMind/issues"
Changelog = "https://github.com/gitstq/LogMind/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["logmind", "logmind.*"]

[tool.setuptools.package-data]
logmind = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["logmind"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=logmind --cov-report=term-missing"
